--- a/Makefile.properties
+++ b/Makefile.properties
@@ -5,3 +5,4 @@ SOURCE_FILES=logger.c
 DYLIB_NAME=libstandardloop-logger.dylib
 DYLIB_PATH=/usr/local/lib/standardloop/
 DYLIB_INCLUDE_PATH=/usr/local/include/standardloop/
+RELEASE_VERSION=0.0.1
