--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,41 +1,32 @@
 name: Release dylib
-
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+      - '^v\d+\.\d+\.\d+'
 
 jobs:
-  build-and-release:
+  build-dylib:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Build C dylib
-      run: |
-        make build_release
+      - name: Build the dylib
+        run: |
+          make build_release
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: |
-          Automated release based on tag push.
-        draft: false
-        prerelease: false
+      - name: Archive dylib
+        run: |
+          zip libstandardloop-logger.dylib.zip libstandardloop-logger.dylib
 
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./libstandardloop-logger.dylib
-        asset_name: libstandardloop-logger.dylib
-        asset_content_type: application/octet-stream
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: libstandardloop-logger.dylib.zip
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
