--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Release dylib
+
 on:
-  push:
-    tags:
-      - '^v\d+\.\d+\.\d+'
+  release:
+    types: [published]
 
 jobs:
   build-dylib:
