--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,8 +19,8 @@ jobs:
 
       - name: echo vars
         run: |
-          echo ${DYLIB_NAME}
-          echo ${DYLIB_ZIP}
+          echo ${{ env.DYLIB_NAME }}
+          echo ${{ env.DYLIB_ZIP }}
 
       - name: Build the dylib
         run: |
@@ -28,13 +28,13 @@ jobs:
 
       - name: Archive dylib
         run: |
-          zip ${DYLIB_ZIP} ${DYLIB_NAME}
+          zip ${{ env.DYLIB_ZIP }} ${{ env.DYLIB_NAME }}
 
       - name: Create dylib Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${DYLIB_ZIP}
+          files: ${{ env.DYLIB_ZIP }}
           draft: false
           prerelease: false
           generate_release_notes: true
@@ -44,5 +44,5 @@ jobs:
       - name: Upload dylib as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${DYLIB_ZIP}
-          path: ${DYLIB_ZIP}
+          name: ${{ env.DYLIB_ZIP }}
+          path: ${{ env.DYLIB_ZIP }}
