clean up repo and add test for pulling github release

--- a/Makefile.properties
+++ b/Makefile.properties
@@ -1,6 +1,6 @@
 CC=gcc
 CC_FLAGS=-Werror -Wextra -Wall -Wfree-nonheap-object -std=c17
-EXECUTABLE_NAME=main
+EXECUTABLE_NAME=logger
 SOURCE_FILES=logger.c
 DYLIB_NAME=libstandardloop-logger.dylib
 DYLIB_PATH=/usr/local/lib/standardloop/
