--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,7 +10,7 @@ vars:
   DYLIB_NAME: libstandardloop-logger.dylib
   DYLIB_PATH: /usr/local/lib/standardloop/
   DYLIB_INCLUDE_PATH: /usr/local/include/standardloop/
-  RELEASE_VERSION: 0.0.3
+  RELEASE_VERSION: 0.0.4
 
 tasks:
   default:
@@ -23,7 +23,7 @@ tasks:
       - cat logger.h | grep -q {{.RELEASE_VERSION}}
       - cat logger.h | grep -q "MAJOR_VERSION 0"
       - cat logger.h | grep -q "MINOR_VERSION 0"
-      - cat logger.h | grep -q "PATCH_VERSION 3"
+      - cat logger.h | grep -q "PATCH_VERSION 4"
 
   release:
     deps:
@@ -42,6 +42,7 @@ tasks:
         -O3 \
         -dynamiclib \
         -current_version {{.RELEASE_VERSION}} \
+        -compatibility_version {{.RELEASE_VERSION}} \
         -o {{.DYLIB_NAME}}
     sources:
       - ./logger.c
