--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,7 +10,7 @@ vars:
   DYLIB_NAME: libstandardloop-logger.dylib
   DYLIB_PATH: /usr/local/lib/standardloop/
   DYLIB_INCLUDE_PATH: /usr/local/include/standardloop/
-  RELEASE_VERSION: 0.0.4
+  RELEASE_VERSION: 0.0.5
 
 tasks:
   default:
@@ -23,7 +23,7 @@ tasks:
       - cat logger.h | grep -q {{.RELEASE_VERSION}}
       - cat logger.h | grep -q "MAJOR_VERSION 0"
       - cat logger.h | grep -q "MINOR_VERSION 0"
-      - cat logger.h | grep -q "PATCH_VERSION 4"
+      - cat logger.h | grep -q "PATCH_VERSION 5"
 
   release:
     deps:
@@ -100,7 +100,8 @@ tasks:
         -lstandardloop-logger \
         -o {{.LAB_EXECUTABLE_NAME}}
     sources:
-      - ./lab.c
+      - lab.c
+      - logger.c
     generates:
       - "{{.LAB_EXECUTABLE_NAME}}"
 
